--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,19 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Subscriber Management</title>
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-SP6RVW60P1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+            gtag("config", "G-SP6RVW60P1", {
+                debug_mode: true,
+            });
+        </script>
         <script src="app.js" defer></script>
         <link rel="stylesheet" href="style.css" />
     </head>
