Fix module error

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
                 debug_mode: true,
             });
         </script>
-        <script src="app.js" defer></script>
+        <script type="module" src="app.js" defer></script>
         <link rel="stylesheet" href="style.css" />
     </head>
 
