Experiment with consent banner

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,17 +4,74 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Subscriber Management</title>
-        <script
-            async
-            src="https://www.googletagmanager.com/gtag/js?id=G-SP6RVW60P1"></script>
+        <link
+            rel="stylesheet"
+            id="silktide-consent-manager-css"
+            href="consent-banner/silktide-consent-manager.css" />
+        <script src="consent-banner/silktide-consent-manager.js"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
+            function loadGoogleAnalytics() {
+                window.dataLayer = window.dataLayer || [];
+                function gtag() {
+                    dataLayer.push(arguments);
+                }
+                window.gtag = gtag;
+
+                gtag("js", new Date());
+                gtag("config", "G-SP6RVW60P1", { debug_mode: true });
+
+                const gaScript = document.createElement("script");
+                gaScript.setAttribute("async", "");
+                gaScript.src =
+                    "https://www.googletagmanager.com/gtag/js?id=G-SP6RVW60P1";
+                document.head.appendChild(gaScript);
             }
-            gtag("js", new Date());
-            gtag("config", "G-SP6RVW60P1", {
-                debug_mode: true,
+
+            silktideCookieBannerManager.updateCookieBannerConfig({
+                background: {
+                    showBackground: true,
+                },
+                cookieIcon: {
+                    position: "bottomRight",
+                },
+                cookieTypes: [
+                    {
+                        id: "analytical",
+                        name: "Analytical",
+                        description:
+                            "<p>These cookies allow us to analyze traffic and performance.</p>",
+                        required: true,
+                        onAccept: function () {
+                            console.log("✅ Analytics accepted");
+                            loadGoogleAnalytics();
+                        },
+                        onReject: function () {
+                            console.log("❌ Analytics rejected");
+                        },
+                    },
+                ],
+                text: {
+                    banner: {
+                        description:
+                            "<p>We use cookies on our site to analyze our traffic.</p>",
+                        acceptAllButtonText: "Accept",
+                        acceptAllButtonAccessibleLabel: "Accept",
+                        rejectNonEssentialButtonText: "Reject",
+                        rejectNonEssentialButtonAccessibleLabel: "Reject",
+                        preferencesButtonText: "",
+                        preferencesButtonAccessibleLabel: "",
+                    },
+                    preferences: {
+                        title: "Customize your cookie preferences",
+                        description:
+                            "<p>We respect your right to privacy. You can choose not to allow some types of cookies. Your cookie preferences will apply across our website.</p>",
+                        creditLinkText: "Get this banner for free",
+                        creditLinkAccessibleLabel: "Get this banner for free",
+                    },
+                },
+                position: {
+                    banner: "bottomCenter",
+                },
             });
         </script>
         <script type="module" src="app.js" defer></script>
